--- a/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
@@ -1,6 +1,8 @@
 ﻿@page "/RadarChart"
 @using ChartJs.Blazor.ChartJS.Common
+@using ChartJs.Blazor.Sample.Shared.Components
 @using ChartJs.Blazor.ChartJS.RadarChart
+@using Newtonsoft.Json
 @using RadarChartPointStyles = ChartJs.Blazor.ChartJS.RadarChart.RadarChartPointStyles
 
 <h2>Radar Chart</h2>
@@ -9,12 +11,23 @@
 </div>
 <ChartJsRadarChart ref="radarChartJs" Config="@radarChartConfig" Width="600" Height="300"/>
 
-<DataSetDisplay DataSets="@radarChartConfig.Data.Datasets" Width="600" Height="300"  />
+<DataSetDisplay ref="_dataSetDisplay" bind-DataSetsStr="@DataSetsStr" Width="600" Height="300"/>
 
 @functions {
 
     private RadarChartConfig radarChartConfig { get; set; }
     ChartJsRadarChart radarChartJs;
+    DataSetDisplay _dataSetDisplay;
+
+    string DataSetsStr
+    {
+        get => JsonConvert.SerializeObject(radarChartConfig.Data.Datasets, Formatting.Indented);
+        set
+        {
+            radarChartConfig.Data.Datasets = JsonConvert.DeserializeObject<List<RadarChartDataset>>(value);
+            Console.WriteLine(JsonConvert.SerializeObject(radarChartConfig.Data.Datasets));
+        }
+    }
 
     protected override void OnInit()
     {
@@ -52,18 +65,25 @@
         };
     }
 
+
     protected override void OnAfterRender()
     {
         Console.WriteLine("OnAfterRender");
         radarChartJs.Reload();
+
+        _dataSetDisplay.OnUpdatedDataSetsStr += (dataSetsStr) =>
+        {
+            radarChartConfig.Data.Datasets = JsonConvert.DeserializeObject<List<RadarChartDataset>>(dataSetsStr);
+            radarChartJs.Reload();
+        };
     }
 
     public void UpdateChart()
     {
-    //Add new dataset
+        //Add new dataset
         var rand = new Random();
         var max = radarChartConfig.Data.Datasets.First().Data.Max();
-    //var color = $"#{rand.Next(0x1000000):X6}";
+        //var color = $"#{rand.Next(0x1000000):X6}";
         var color = $"#{rand.Next(16777215):X6}";
         radarChartConfig.Data.Datasets.Add(new RadarChartDataset
         {
