--- a/samples/ChartJs.Blazor.Sample/Pages/BubbleChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/BubbleChart.cshtml
@@ -1,7 +1,10 @@
 ﻿@page "/BubbleChart"
 @using ChartJs.Blazor.ChartJS.BubbleChart
 @using ChartJs.Blazor.ChartJS.Common
+@using ChartJs.Blazor.ChartJS.DoughnutChart
 @using ChartJs.Blazor.Util.Color
+@using ChartJs.Blazor.Sample.Shared.Components
+@using Newtonsoft.Json
 
 <h2>Bubble Chart</h2>
 <div class="row">
@@ -9,12 +12,24 @@
 </div>
 <ChartJsBubbleChart ref="bubbleChartJs" Config="@bubbleChartConfig" Width="600" Height="300"/>
 
-<DataSetDisplay DataSets="@bubbleChartConfig.Data.Datasets" Width="600" Height="300" />
+<DataSetDisplay ref="_dataSetDisplay" bind-DataSetsStr="@DataSetsStr" Width="600" Height="300"/>
 
 @functions{
 
     public BubbleChartConfig bubbleChartConfig { get; set; }
     ChartJsBubbleChart bubbleChartJs;
+
+    DataSetDisplay _dataSetDisplay;
+
+    string DataSetsStr
+    {
+        get => JsonConvert.SerializeObject(bubbleChartConfig.Data.Datasets, Formatting.Indented);
+        set
+        {
+            bubbleChartConfig.Data.Datasets = JsonConvert.DeserializeObject<List<BubbleChartDataset>>(value);
+            Console.WriteLine(JsonConvert.SerializeObject(bubbleChartConfig.Data.Datasets));
+        }
+    }
 
     protected override void OnInit()
     {
@@ -74,6 +89,12 @@
     {
         Console.WriteLine("OnAfterRender");
         bubbleChartJs.Reload();
+
+        _dataSetDisplay.OnUpdatedDataSetsStr += (dataSetsStr) =>
+        {
+            bubbleChartConfig.Data.Datasets = JsonConvert.DeserializeObject<List<BubbleChartDataset>>(dataSetsStr);
+            bubbleChartJs.Reload();
+        };
     }
 
     public void UpdateChart()
