--- a/samples/ChartJs.Blazor.Sample/Pages/LineChart/LineChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/LineChart/LineChart.cshtml
@@ -1,17 +1,17 @@
 ﻿@page "/LineChart"
+@using System.ComponentModel
 @using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.LineChart
 @using ChartJs.Blazor.Sample.Shared.Components
 @using Newtonsoft.Json
 
-
 <h2>Line Chart</h2>
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
-<ChartJsLineChart ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300" />
+<ChartJsLineChart ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300"/>
 
-<DataSetDisplay ref="_dataSetDisplay" bind-DataSetsStr="@DataSetsStr" Width="600" Height="300" />
+<DataSetDisplay ref="_dataSetDisplay" bind-DataSetsStr="@DataSetsStr" Width="600" Height="300"/>
 
 @functions{
 
@@ -40,7 +40,7 @@
                 Text = "Sample chart from Blazor",
                 Display = true,
                 Responsive = true,
-                Title = new OptionsTitle { Display = true, Text = "Text?" },
+                Title = new OptionsTitle {Display = true, Text = "Text?"},
                 Tooltips = new Tooltips
                 {
                     Mode = Mode.nearest,
@@ -49,29 +49,29 @@
                 Scales = new Scales
                 {
                     xAxes = new List<Axis>
-                {
-                    new Axis
                     {
-                        Display = "xAxesDisplay",
-                        ScaleLabel = new ScaleLabel
+                        new Axis
                         {
-                            Display = ".",
-                            LabelString = ".labelString"
+                            Display = "xAxesDisplay",
+                            ScaleLabel = new ScaleLabel
+                            {
+                                Display = ".",
+                                LabelString = ".labelString"
+                            }
                         }
-                    }
-                },
+                    },
                     yAxes = new List<Axis>
-                {
-                    new Axis
                     {
-                        Display = "yAxes",
-                        ScaleLabel = new ScaleLabel
+                        new Axis
                         {
-                            Display = "..",
-                            LabelString = "..label"
+                            Display = "yAxes",
+                            ScaleLabel = new ScaleLabel
+                            {
+                                Display = "..",
+                                LabelString = "..label"
+                            }
                         }
                     }
-                }
                 },
                 Hover = new LineChartOptionsHover
                 {
@@ -81,21 +81,21 @@
             },
             Data = new LineChartData
             {
-                Labels = new List<string> { "Red", "Blue", "Yellow", "Green", "Purple", "Orange" },
+                Labels = new List<string> {"Red", "Blue", "Yellow", "Green", "Purple", "Orange"},
                 Datasets = new List<LineChartDataset>
-            {
-                new LineChartDataset
                 {
-                    BackgroundColor = "#ff6384",
-                    BorderColor = "#ff6384",
-                    Label = "# of Votes from blazor",
-                    Data = new List<dynamic> {4, 6, 2, 7, 9, 1},
-                    Fill = false,
-                    BorderWidth = 2,
-                    PointRadius = 3,
-                    PointBorderWidth = 1
+                    new LineChartDataset
+                    {
+                        BackgroundColor = "#ff6384",
+                        BorderColor = "#ff6384",
+                        Label = "# of Votes from blazor",
+                        Data = new List<object> {4, 6, 2, 7, 9, 1},
+                        Fill = false,
+                        BorderWidth = 2,
+                        PointRadius = 3,
+                        PointBorderWidth = 1
+                    }
                 }
-            }
             }
         };
     }
@@ -114,22 +114,24 @@
 
     public void UpdateChart()
     {
-        //Update existing dataset
+    //Update existing dataset
         var rand = new Random();
         lineChartConfig.Data.Labels.Add($"New{DateTime.Now.Second}");
 
-        lineChartConfig.Data.Datasets.ForEach(dataset => { dataset.Data.Add(rand.Next(dataset.Data.Cast<int>().Max())); });
+        lineChartConfig.Data.Datasets.ForEach(dataset =>
+        {
+            var next = rand.Next(dataset.Data.Select(Convert.ToInt32).Max());
+            dataset.Data.Add(next);
+        });
 
         lineChartJs.Reload();
     }
-
 
     protected override Task OnInitAsync()
     {
         Console.WriteLine("OnInitAsync");
         return Task.CompletedTask;
     }
-
 
     protected override void OnParametersSet()
     {
@@ -142,13 +144,11 @@
         return Task.CompletedTask;
     }
 
-
     protected override bool ShouldRender()
     {
         Console.WriteLine("ShouldRender");
         return true;
     }
-
 
     protected override Task OnAfterRenderAsync()
     {
