--- a/samples/ChartJs.Blazor.Sample/Shared/Components/DataSetDisplay.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/Components/DataSetDisplay.cshtml
@@ -1,19 +1,35 @@
 ﻿@using ChartJs.Blazor.Sample.Shared.Extensions
 
-<div class="form-group">
-    <label for="textAreaId">Chart Dataset - You can Edit Me</label>
-    <textarea id="textAreaId"
-                ref="datasetsTextArea"
-              class="form-control"
-              Width="@Width"
-              Height="@Height"
-              Rows="@Rows"
-              oninput="@OnKeyUp"
-              bind-value-onchange="@DataSetsStr"
-              style="display: block; margin-left: auto; margin-right: auto"></textarea>
-</div>
+<form style="margin-top: 20px">
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="textAreaId">Chart Dataset - You can Edit Me</label>
+        </div>
+        <div class="form-group col-md-6">
+            <button class="btn btn-primary float-right"
+                    type="button"
+                    onclick="@RestoreInitialData">
+                I messed up
+            </button>
+        </div>
+    </div>
+    <div class="form-row">
+        <textarea id="textAreaId"
+                      colspan="2"
+                      ref="datasetsTextArea"
+                      class="form-control"
+                      Width="@Width"
+                      Height="@Height"
+                      Rows="@Rows"
+                      oninput="@OnKeyUp"
+                      bind-value-onchange="@DataSetsStr"
+                      style="display: block; margin-left: auto; margin-right: auto"></textarea>
+    </div>
+</form>
 
 @functions {
+
+    private string _initialData = null;
 
     ElementRef datasetsTextArea;
 
@@ -29,8 +45,6 @@
     [Parameter]
     int Rows { get; set; } = 25;
 
-
-    //void OnKeyUp(UIChangeEventArgs args)
     async void OnKeyUp(UIEventArgs args)
     {
         var datasetsTextAreaVal = await datasetsTextArea.GetValue().ConfigureAwait(false);
@@ -45,8 +59,10 @@
         get => _dataSetsStr;
         set
         {
+            _initialData = _initialData ?? value;
+
             _dataSetsStr = value;
-            OnUpdatedDataSetsStr?.Invoke(_dataSetsStr);
+            OnUpdatedDataSetsStr?.Invoke(_dataSetsStr); // unfortunately this changes on when the text area looses focus; bind-value-onchange isn't working right now
         }
     }
 
@@ -55,4 +71,10 @@
 
     //[Parameter]
     public Action<string> OnUpdatedDataSetsStr { get; set; }
+
+    private void RestoreInitialData()
+    {
+        DataSetsStr = _initialData;
+    }
+
 }
